--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="nav">
+      <button class="return-button">
+        <img id="return-image" src="/images/home.png" alt="home icon" /> My
+        Portfolio
+      </button>
+    </div>
     <div class="container">
       <div class="card-container">
         <div class="card-top-container">
