--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="images/MB.png">
+    <link rel="icon" href="images/MB.png">
   </head>
   <body>
     <div class="nav">
